--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "opcodesio/log-viewer": "^3.10",
         "php-open-source-saver/jwt-auth": "^2.3",
         "spatie/laravel-permission": "^6.8",
         "wisdom-diala/countrypkg-laravel": "^1.0"
